k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danantara
  labels:
    app.kubernetes.io/name: danantara
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: danantara
  ports:
    - name: http
      port: 80
      targetPort: 3000
